Change urls to dev

--- a/src/CardComp/Card.css
+++ b/src/CardComp/Card.css
@@ -108,7 +108,7 @@ MCQ Card question always takes 60% */
   position: absolute;
   width: 5%;
   font-size: 1em;
-  font-weight: bold;
+  font-weight: 900;
   margin-bottom: 0;
   color: #0056D2;
   top: 1%;
