--- a/src/pages/ErrorPage.css
+++ b/src/pages/ErrorPage.css
@@ -1,5 +1,5 @@
 .error-content{
-
+  background-color: #87CEEB;
 }
 .error-container{
   display: flex;
@@ -8,15 +8,56 @@
   align-items: center;
   height: 100%;
   width: 100%;
+  
 }
 .error-image{
   width: 100%;
-
-  background: transparent;
+  height: 30%;
 }
 
 .error-message{
-  font-size: 2.5em;
+  font-size: 2.2em;
   font-weight: 900;
+  text-align: center;
   color: snow;
 }
+
+.try-again-button{
+  width: 50%;
+  font-size: 1.5em;
+  --background: linear-gradient(to right, #02AAB0 0%, #00CDAC  51%, #02AAB0  100%); 
+  transition: 0.5s;        
+  
+  
+};
+
+.try-again-button:hover {
+  background-position: right center; /* change the direction of the change here */
+     color: #fff;
+     text-decoration: none;
+}
+
+         
+.btn-grad {
+  --background: transparent;
+  background-image: linear-gradient(to right, #02AAB0 0%, #00CDAC  51%, #02AAB0  100%);
+  margin: 10px;
+  padding: 15px 45px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;            
+  box-shadow: 0 0 20px #eee;
+  border-radius: 10px;
+  display: block;
+  font-size: 1.5em;
+  font-weight: 900;
+}
+
+.btn-grad:hover {
+  background-position: right center; /* change the direction of the change here */
+  color: #fff;
+  text-decoration: none;
+}
+
