--- a/src/pages/ErrorPage.css
+++ b/src/pages/ErrorPage.css
@@ -11,8 +11,10 @@
   
 }
 .error-image{
+  position: absolute;
+  top: 0;
   width: 100%;
-  height: 30%;
+  height: 35%;
 }
 
 .error-message{
@@ -20,6 +22,8 @@
   font-weight: 900;
   text-align: center;
   color: snow;
+  margin-top: 5em;
+  margin-bottom: 1.5em;
 }
 
 .try-again-button{
@@ -38,8 +42,7 @@
 }
 
          
-.btn-grad {
-  --background: transparent;
+.try-again-button {
   background-image: linear-gradient(to right, #02AAB0 0%, #00CDAC  51%, #02AAB0  100%);
   margin: 10px;
   padding: 15px 45px;
@@ -51,13 +54,54 @@
   box-shadow: 0 0 20px #eee;
   border-radius: 10px;
   display: block;
-  font-size: 1.5em;
+  font-size: 1.6em;
   font-weight: 900;
+  width: 80%;
+  height: 10%;
+  margin-bottom: 1em;
 }
 
-.btn-grad:hover {
+.try-again-button:hover {
   background-position: right center; /* change the direction of the change here */
   color: #fff;
   text-decoration: none;
 }
+
+.two-button-container{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 20%;
+  gap: 10%;
+}
+
+         
+.report-issue-button {
+  background-image: linear-gradient(to right, #00d2ff 0%, #3a7bd5  51%, #00d2ff  100%);
+  margin: 10px;
+  padding: 15px 45px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;            
+  box-shadow: 0 0 20px #eee;
+  border-radius: 10px;
+  display: flex;
+  font-size: 1.6em;
+  font-weight: 900;
+  width: 80%;
+  height: 10%;
+  margin-bottom: 1em;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.report-issue-button:hover {
+  background-position: right center; /* change the direction of the change here */
+  color: #fff;
+  text-decoration: none;
+}
+
 
