--- a/src/LogComp/LogButton.css
+++ b/src/LogComp/LogButton.css
@@ -13,6 +13,35 @@
   --background-hover: aliceblue;
 }
 
+          
+.log-button {
+  position: absolute;
+  bottom: 10%;
+  width: 70%;
+  height: 10%;
+  background-image: linear-gradient(to right, #ECE9E6 0%, #FFFFFF  51%, #ECE9E6  100%);
+  margin: 10px;
+  padding: 15px 45px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: darkgray;
+  font-size: 1.6em;
+  font-weight: 900;            
+  box-shadow: 0 0 20px #eee;
+  border-radius: 10px;
+  display: block;
+}
+
+.log-button:hover {
+  background-position: right center; /* change the direction of the change here */
+  color: #fff;
+  text-decoration: none;
+}
+
+
+
 .login-button {
   opacity: 0;
   animation: displayButton 1100ms ease-out forwards;
@@ -20,7 +49,7 @@
 }
 
 .logout-button {
-  left: 15%;
+  left: 12.5%;
 }
 
 @keyframes displayButton {
