--- a/src/pages/ErrorPage.css
+++ b/src/pages/ErrorPage.css
@@ -56,9 +56,9 @@
   display: block;
   font-size: 1.6em;
   font-weight: 900;
-  width: 80%;
-  height: 10%;
-  margin-bottom: 1em;
+  width: 45%;
+  height: 100%;
+  margin-left: 0.5em;
 }
 
 .try-again-button:hover {
@@ -71,8 +71,8 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  height: 20%;
-  gap: 10%;
+  height: 10%;
+  margin-bottom: 1.5em;
 }
 
          
@@ -90,12 +90,13 @@
   display: flex;
   font-size: 1.6em;
   font-weight: 900;
-  width: 80%;
-  height: 10%;
+  width: 45%;
+  height: 100%;
   margin-bottom: 1em;
   justify-content: center;
   align-items: center;
-
+  margin-right: 0.5em;
+  text-decoration: none;
 }
 
 .report-issue-button:hover {
