--- a/src/pages/ErrorPage.css
+++ b/src/pages/ErrorPage.css
@@ -1,23 +1,22 @@
-.error-content{
-  background-color: #87CEEB;
+.error-content {
+  background-color: #87ceeb;
 }
-.error-container{
+.error-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 100%;
   width: 100%;
-  
 }
-.error-image{
+.error-image {
   position: absolute;
   top: 3em;
   width: 100%;
   height: 35%;
 }
 
-.error-message{
+.error-message {
   font-size: 2.2em;
   font-weight: 900;
   text-align: center;
@@ -26,13 +25,10 @@
   margin-bottom: 1.5em;
 }
 
-.two-button-container{
+.two-button-container {
   display: flex;
   flex-direction: row;
   width: 100%;
   height: 10%;
   margin-bottom: 1.5em;
 }
-
-
-
