--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,6 +1,9 @@
 /* Background Color */
 .home-content {
   background: rgba(215, 224, 255, 1);
-  background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(176,229,208,1) 42%, rgba(92,202,238,0.41) 93.6% );
-
+  background-image: radial-gradient(
+    circle farthest-corner at 10% 20%,
+    rgba(176, 229, 208, 1) 42%,
+    rgba(92, 202, 238, 0.41) 93.6%
+  );
 }
