change log button animation text color

--- a/src/ButtonComp/Button.css
+++ b/src/ButtonComp/Button.css
@@ -61,6 +61,10 @@
   );
 }
 
+.log-button:hover{
+  color: gray;
+}
+
 .login-button {
   opacity: 0;
   animation: displayButton 1100ms ease-out forwards;
