--- a/src/MCQComponents/MCQChoice.css
+++ b/src/MCQComponents/MCQChoice.css
@@ -1,12 +1,15 @@
 /* Text Styling for Individual Choice */
 .choice-text {
-  font-size: 1.1em;
+  font-size: 1em;
+  line-height: 1.5em;
   font-weight: bold;
+  
 }
 
 /* Styling for the button before any clicking */
 .choice-button {
   flex-grow: 1;
+  white-space: normal;
 }
 .initial-button {
   --background: slateblue;
