--- a/src/pages/LoadingPage.css
+++ b/src/pages/LoadingPage.css
@@ -45,8 +45,19 @@
   animation-fill-mode: forwards;
 }
 
+.server-container {
+  animation-delay: 1.2s;
+}
 
-.check{
+.cards-container {
+  animation-delay: 2.2s;
+}
+
+.deck-container {
+  animation-delay: 3.2s;
+}
+
+.check {
   color: rgba(79, 216, 6, 0.924);
   position: absolute;
   left: -1em;
@@ -56,52 +67,29 @@
   animation-fill-mode: forwards;
 }
 
-.user-check{
+.user-check {
   animation-delay: 1.2s;
 }
 
-.server-check{
+.server-check {
   animation-delay: 2s;
 }
 
-.cards-check{
+.cards-check {
   animation-delay: 3s;
 }
 
 @keyframes showCheck {
-  to{
-   opacity: 1;
-  }
-}
-
-@keyframes showSegment {
-  to{
+  to {
     opacity: 1;
   }
 }
 
-.user-bricks {
-  animation: user-disappear 3s forwards;
-}
-
-@keyframes user-disappear {
-  100%{
-    opacity: 0;
+@keyframes showSegment {
+  to {
+    opacity: 1;
   }
 }
-
-.server-container{
-  animation-delay: 1.2s;
-}
-
-.cards-container{
-  animation-delay: 2.2s;
-}
-
-.deck-container{
-  animation-delay: 3.2s;
-}
-
 
 .dot-bricks {
   position: relative;
@@ -140,7 +128,8 @@
     box-shadow: 10007px -16px 0 0 grey, 9991px 0 0 0 grey, 10007px 0 0 0 grey;
   }
   16.667% {
-    box-shadow: 10007px -16px 0 0 grey, 9991px -16px 0 0 grey, 10007px 0 0 0 grey;
+    box-shadow: 10007px -16px 0 0 grey, 9991px -16px 0 0 grey,
+      10007px 0 0 0 grey;
   }
   25% {
     box-shadow: 10007px -16px 0 0 grey, 9991px -16px 0 0 grey, 9991px 0 0 0 grey;
@@ -152,7 +141,8 @@
     box-shadow: 10007px 0 0 0 grey, 10007px -16px 0 0 grey, 9991px 0 0 0 grey;
   }
   50% {
-    box-shadow: 10007px 0 0 0 grey, 10007px -16px 0 0 grey, 9991px -16px 0 0 grey;
+    box-shadow: 10007px 0 0 0 grey, 10007px -16px 0 0 grey,
+      9991px -16px 0 0 grey;
   }
   58.333% {
     box-shadow: 9991px 0 0 0 grey, 10007px -16px 0 0 grey, 9991px -16px 0 0 grey;
@@ -164,7 +154,8 @@
     box-shadow: 9991px 0 0 0 grey, 10007px 0 0 0 grey, 10007px -16px 0 0 grey;
   }
   83.333% {
-    box-shadow: 9991px -16px 0 0 grey, 10007px 0 0 0 grey, 10007px -16px 0 0 grey;
+    box-shadow: 9991px -16px 0 0 grey, 10007px 0 0 0 grey,
+      10007px -16px 0 0 grey;
   }
   91.667% {
     box-shadow: 9991px -16px 0 0 grey, 9991px 0 0 0 grey, 10007px -16px 0 0 grey;
@@ -175,7 +166,7 @@
   }
 }
 
-.segment-icon{
+.segment-icon {
   position: absolute;
   left: 11%;
 }
