--- a/src/pages/LoadingPage.css
+++ b/src/pages/LoadingPage.css
@@ -34,7 +34,7 @@
 .segment-container {
   position: relative;
   width: 90%;
-  height: 20%;
+  height: 15%;
   display: flex;
   left: 5%;
   justify-content: flex-start;
@@ -176,4 +176,115 @@
   left: 29%;
   font-size: 1.3em;
   font-weight: 900;
+}
+
+
+.walking {
+  width: 70%;
+  height: 20%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  position: relative;
+}
+
+.head {
+  width: 25px;
+  height: 25px;
+  background-color: white;
+  border-radius: 50%;
+  position: relative;
+  left: 0.3em;
+  top: 0.15em;
+  animation: headChange 1s infinite 1.6s ease-in;
+}
+
+.body{
+  width: 20px;
+  height: 50px;
+  background-color: white;
+  border-radius: 60px 10px 0 0;
+  animation: bodyChange 1s infinite 1.6s ease-in
+}
+
+.firstLeg, .secondLeg{
+  width: 17.5px;
+  height: 5px;
+  background-color: white;
+  border-radius: 20px 50px 50px 20px;
+  position: relative;
+  top: 30px;
+  left: 10px;
+  animation: walk 2s infinite linear;
+}
+
+.secondLeg{
+  top: 12.5px;
+  animation-delay: 1s;
+}
+
+.shadow {
+  width: 50px;
+  height: 10px;
+  background-color: rgba(192, 82, 82, 0.2);
+  border-radius: 50%;
+  animation:  shadowChange 1s infinite 1.6s linear;
+}
+
+@keyframes headChange {
+  0%{
+    transform: translateY(0px);
+  }
+  50%{
+    transform: translateY(7px);
+  }
+  100%{
+    transform: translateY((0px));
+  }
+}
+
+@keyframes bodyChange {
+  0%{
+    transform: translateY(0px);
+  }
+  50%{
+    transform: translateY(3px);
+  }
+  100%{
+    transform: translateY((0px));
+  }
+}
+
+@keyframes walk {
+  0%{
+    transform: translateX(0px) rotate(0deg);
+  }
+  20%{
+    transform: translateX(-10px) rotate(0deg);
+  }
+  40%{
+    transform: translate(-20px, 0px) rotate(0deg);
+  }
+  60%{
+    transform: translate(-15px, -5px) rotate(17.5deg);
+  }
+  90%{
+    transform: translate(5px, -3.5px) rotate(-17.5deg);
+  }
+  100%{
+    transform: translateX(0px);
+  }
+}
+
+@keyframes shadowChange {
+  0%{
+    width: 50px;
+  }
+  50%{
+    width: 70px;
+  }
+  100%{
+    width: 50px;
+  }
 }
