--- a/src/ButtonComp/Button.css
+++ b/src/ButtonComp/Button.css
@@ -1,3 +1,4 @@
+/* Linear Gradient Button Used for Log In / Log Out / Try Again / Report Issue */
 .grad-button {
   margin: 10px;
   padding: 15px 45px;
@@ -47,6 +48,7 @@
   text-decoration: none;
 }
 
+/* Button Styling shared for both login button and log out button */
 .log-button {
   position: absolute;
   color: darkgray;
@@ -75,6 +77,7 @@
   left: 12.5%;
 }
 
+/* Animation for the login button to appear */
 @keyframes displayButton {
   10% {
     opacity: 0.1;
