--- a/src/pages/LoadingPage.css
+++ b/src/pages/LoadingPage.css
@@ -23,7 +23,7 @@
   justify-content: flex-start;
   align-items: center;
   opacity: 0;
-  animation-name: showSegment;
+  animation-name: showPiece;
   animation-duration: 1.5s;
   animation-fill-mode: forwards;
 }
@@ -49,7 +49,7 @@
   position: absolute;
   left: -1em;
   opacity: 0;
-  animation-name: showCheck;
+  animation-name: showPiece;
   animation-duration: 0.5s;
   animation-fill-mode: forwards;
 }
@@ -69,13 +69,7 @@
   animation-delay: 3s;
 }
 
-@keyframes showCheck {
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes showSegment {
+@keyframes showPiece {
   to {
     opacity: 1;
   }
