Review Tutorial Page

--- a/src/pages/TutorialPage.css
+++ b/src/pages/TutorialPage.css
@@ -1,3 +1,5 @@
+/* Background color for the tutorial page 
+Same as the background color for the card screen */
 .tutorialpage-content {
   background: rgba(215, 224, 255, 1);
 }
