--- a/src/pages/LogInPage.css
+++ b/src/pages/LogInPage.css
@@ -1,7 +1,9 @@
+/* Background color for the login page */
 .login-content {
   background: linear-gradient(#2980b9, #6dd5fa);
 }
 
+/* Overall Container for the login page */
 .login-page-container {
   width: 100%;
   height: 100%;
@@ -11,6 +13,7 @@
   align-items: center;
 }
 
+/* Styling for the spacecraft image */
 .space-craft {
   width: 60%;
   height: 20%;
@@ -26,12 +29,14 @@
   }
 }
 
+/* Container for the welcome text and rectangular span */
 .welcome-container {
   margin-bottom: 1em;
   display: grid;
   place-items: center;
 }
 
+/* Styling for the welcome text */
 .welcome-text {
   color: snow;
   font-weight: 900;
@@ -43,6 +48,7 @@
   animation-delay: 1100ms;
 }
 
+/* Styling for the rectangular covering of welcome text */
 .welcome-covering {
   position: absolute;
   left: 0;
@@ -70,6 +76,7 @@
   }
 }
 
+/* Styling for the description text */
 .description-text {
   font-weight: bold;
   text-align: center;
