--- a/src/pages/InfoPage.css
+++ b/src/pages/InfoPage.css
@@ -1,3 +1,10 @@
 .info-content {
-  background: rgba(215, 224, 255, 1);
+  background: white;
+}
+
+.info-container{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
 }
