--- a/src/HomeComp/TutorialPortal.css
+++ b/src/HomeComp/TutorialPortal.css
@@ -1,4 +1,5 @@
-.top-container{
+/* Styling for the container of icon and tutorial portal */
+.top-container {
   height: 10%;
   width: 100%;
   display: flex;
@@ -6,20 +7,23 @@
   justify-content: center;
   align-items: center;
 }
-.tutorial-card{
+/* Styling for the portal, which is IonCard */
+.tutorial-card {
   position: absolute;
   width: 39%;
   top: -2.5%;
   right: -1%;
 }
-.tutorial-card-content{
+/* Styling for the portal card content */
+.tutorial-card-content {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   gap: 5%;
 }
-.tutorial-text{
+/* Styling for the text of tutorial */
+.tutorial-text {
   font-size: 1.3em;
   font-weight: 900;
   text-align: center;
