Home style fix and remove redirect to login for mobile directly

--- a/src/HomeComp/DashBoard.css
+++ b/src/HomeComp/DashBoard.css
@@ -1,5 +1,6 @@
 /* The Top Component of Cards left */
 .task-card {
+  width: 85%;
   background: #ed637e; /* fallback for old browsers */
   background: -webkit-linear-gradient(
     to right,
