--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -12,6 +12,8 @@
   text-align: center;
   font-weight: bold;
   color: rgb(88, 19, 72);
+  margin-top: 2rem;
+  margin-bottom: 1rem;
 }
 
 .home-loaded-wrapper{
