--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -8,6 +8,16 @@
   );
 }
 
+/* Overall Container of the home page */
+.home-loaded-wrapper{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+/* Hey UserName */
 .user-name{
   text-align: center;
   font-weight: bold;
@@ -16,10 +26,3 @@
   margin-bottom: 1rem;
 }
 
-.home-loaded-wrapper{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-}
