--- a/src/CardComp/Card.css
+++ b/src/CardComp/Card.css
@@ -51,6 +51,7 @@
   display: flex;
   flex-direction: column;
   line-height: 1.5em;
+  max-width: 95%;
 }
 
 /* Styling for some tags like p, hr, pre, code */
