Finish the statistics page

--- a/src/StatisticsComp/Statistics.css
+++ b/src/StatisticsComp/Statistics.css
@@ -14,8 +14,51 @@
 }
 
 .statistics-card{
+  left: 100%;
   margin-top: 8px;
   margin-bottom: 8px;
+  animation-name: showCard;
+  animation-duration: 0.5s;
+  animation-timing-function: ease;
+  animation-fill-mode: forwards;
+}
+
+@keyframes showCard {
+  to{
+    left: 0;
+  }
+}
+
+.session-delay{
+  animation-delay: 0.5s;
+}
+
+.correct-delay{
+  animation-delay: 1s;
+}
+
+.incorrect-delay{
+  animation-delay: 1.5s;
+}
+
+.skip-delay{
+  animation-delay: 2s;
+}
+
+.know-delay{
+  animation-delay: 2.5s;
+}
+
+.dontKnow-delay{
+  animation-delay: 3s;
+}
+
+.oneMore-delay{
+  animation-delay: 3.5s;
+}
+
+.poorCard-delay{
+  animation-delay: 4s;
 }
 
 .card-title{
