--- a/src/pages/CardScreen.css
+++ b/src/pages/CardScreen.css
@@ -1,6 +1,6 @@
 /* Background color for the whole page */
 .page-content {
-  background: rgba(215, 224, 255, 1);
+  background: #F1F2EB;
 }
 
 /* Styling for the Toolbar counter */
