--- a/src/pages/LoadingPage.css
+++ b/src/pages/LoadingPage.css
@@ -1,6 +1,6 @@
 /* Background Color */
 .loading-content {
-  background: rgba(215, 224, 255, 1);
+  background: #F1F2EB;
 }
 
 /* Wrapper for the text and bar */
