--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 /* Background color for the tab bar */
 .tab-bar {
-  --background: #0056d2;
+  /* --background: #0056d2; */
+  --background: #A4C2A5;
 }
 
 /* Colors for the icons on the bar */
