--- a/src/IndicationComp/CardsTab.css
+++ b/src/IndicationComp/CardsTab.css
@@ -20,7 +20,7 @@
 
 /* Styling the number on the cards */
 .tab-card p {
-  color: brown;
+  color: seagreen;
   font-size: 160%;
   font-weight: bold;
 }
