--- a/src/StatisticsComp/Statistics.css
+++ b/src/StatisticsComp/Statistics.css
@@ -1,19 +1,19 @@
-.statistics-content{
-  background: #F1F2EB;
+.statistics-content {
+  background: #f1f2eb;
 }
 
-.statistics-title{
+.statistics-title {
   text-align: center;
   font-weight: 800;
   color: green;
   margin-top: 3.2rem;
 }
 
-.statistics-container{
+.statistics-container {
   display: grid;
 }
 
-.statistics-card{
+.statistics-card {
   left: 100%;
   margin-top: 8px;
   margin-bottom: 8px;
@@ -24,59 +24,59 @@
 }
 
 @keyframes showCard {
-  to{
+  to {
     left: 0;
   }
 }
 
-.session-delay{
+.session-delay {
   animation-delay: 0.2s;
 }
 
-.correct-delay{
+.correct-delay {
   animation-delay: 0.4s;
 }
 
-.incorrect-delay{
+.incorrect-delay {
   animation-delay: 0.6s;
 }
 
-.skip-delay{
+.skip-delay {
   animation-delay: 0.8s;
 }
 
-.know-delay{
-  animation-delay: 1.0s;
+.know-delay {
+  animation-delay: 1s;
 }
 
-.dontKnow-delay{
+.dontKnow-delay {
   animation-delay: 1.2s;
 }
 
-.oneMore-delay{
+.oneMore-delay {
   animation-delay: 1.4s;
 }
 
-.poorCard-delay{
+.poorCard-delay {
   animation-delay: 1.6s;
 }
 
-.card-title{
+.card-title {
   font-size: 1rem;
   display: flex;
   align-items: center;
 }
 
-.blank-space{
+.blank-space {
   width: 1rem;
 }
 
-.card-icon{
+.card-icon {
   position: absolute;
   left: 50%;
 }
 
-.card-values{
+.card-values {
   position: absolute;
   right: 5%;
 }
