--- a/src/pages/CardScreen.css
+++ b/src/pages/CardScreen.css
@@ -1,6 +1,6 @@
 /* Background color for the whole page */
 .page-content {
-  background: #F1F2EB;
+  background: #f1f2eb;
 }
 
 /* Styling for the Toolbar counter */
