--- a/src/pages/InfoPage.css
+++ b/src/pages/InfoPage.css
@@ -1,6 +1,6 @@
 /* Background color for the info page */
 .info-content {
-  background: white;
+  background: #F1F2EB;
 }
 
 /* Overall Container for the info page */
