--- a/src/HomeComp/TutorialPortal.css
+++ b/src/HomeComp/TutorialPortal.css
@@ -10,8 +10,8 @@
 /* Styling for the portal, which is IonCard */
 .tutorial-card {
   position: absolute;
-  top: -3%;
-  right: -4.5%;
+  top: -1%;
+  right: -1.8vw;
 }
 /* Styling for the portal card content */
 .tutorial-card-content {
