--- a/src/pages/InfoPage.css
+++ b/src/pages/InfoPage.css
@@ -9,4 +9,23 @@
   flex-direction: column;
   width: 100%;
   height: 100%;
+  align-items: center;
+}
+
+
+
+.maple-img{
+  width: 200px;
+  height: 200px;
+ 
+}
+
+.h2-text{
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.15);
+}
+
+.extension-icon{
+  font-size: 2.5rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
