--- a/src/ButtonComp/Button.css
+++ b/src/ButtonComp/Button.css
@@ -51,30 +51,33 @@
 /* Button Styling shared for both login button and log out button */
 .log-button {
   position: absolute;
-  color: darkgray;
-  bottom: 7%;
+  color: snow;
   width: 70%;
   height: 10%;
   background-image: linear-gradient(
     to right,
-    #ece9e6 0%,
+    /* #ece9e6 0%,
     #ffffff 51%,
-    #ece9e6 100%
+    #ece9e6 100% */
+    #6dd5fa 0%, #2980b9 51%, #6dd5fa 100%
   );
 }
 
 .log-button:hover {
-  color: gray;
+  color: honeydew;
 }
 
 .login-button {
   opacity: 0;
+  bottom: 20%;
   animation: displayButton 1100ms ease-out forwards;
   animation-delay: 1350ms;
 }
 
 .logout-button {
   left: 12.5%;
+  bottom: 7%;
+  
 }
 
 /* Animation for the login button to appear */
