--- a/src/pages/LogInPage.css
+++ b/src/pages/LogInPage.css
@@ -1,7 +1,10 @@
 /* Background color for the login page */
 .login-content {
-  background: linear-gradient(#2980b9, #6dd5fa);
+  /* background: linear-gradient(#2980b9, #6dd5fa);*/
+  background: white;
 }
+
+
 
 /* Overall Container for the login page */
 .login-page-container {
@@ -9,7 +12,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  
   align-items: center;
 }
 
@@ -105,4 +108,8 @@
   100% {
     opacity: 1;
   }
+}
+
+.login-logo{
+  margin-top: 4rem;
 }
