--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -85,8 +85,8 @@ ion-content {
 }
 
 ion-toolbar {
-  --color: #ffffff;
-  --background: #A4C2A5;
+  --color: #5a5555;
+  --background: #f4f4f4;
 }
 
 ion-button {
