--- a/src/TutorialComp/OneMoreTutorialModal.css
+++ b/src/TutorialComp/OneMoreTutorialModal.css
@@ -55,8 +55,8 @@ TranslateY for the 95% time so it is not moving for that duration */
 .arrow-image {
   position: absolute;
   width: 15%;
-  right: 2%;
+  left: 2%;
   bottom: 100%;
   height: 20%;
-  transform: rotate(-30deg);
+  transform: rotate(220deg);
 }
