Fix session info with latest result and adjust the feedback modal

--- a/src/pages/FeedbackModal.css
+++ b/src/pages/FeedbackModal.css
@@ -80,7 +80,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 90%;
   height: 100%;
   border: 2px solid rgba(0, 0, 0, 0.15);
 
@@ -89,6 +89,8 @@
   border-radius: 0.75rem;
   padding: 1.5rem;
   z-index: 1;
+  margin-left: 5%;
+ 
 }
 
 .contact__form-tag{
@@ -99,6 +101,7 @@
   padding: 0.25rem;
   background-color: hsl(9, 0%, 98%);
   z-index: 10;
+  margin-left: 5%;
 }
 
 .contact__form-area{
@@ -112,12 +115,13 @@
 
 .button-message{
   display: inline-block;
-  background-color: hsl(9, 0%, 20%);
+  background-color: gray;
   color: #fff;
   padding: 1.25rem 2rem;
   border-radius: 1rem;
   font-weight: 600;
   font-size: 1.2rem;
+  margin-left: 5rem;
 }
 
 .container{
@@ -126,7 +130,7 @@
   width: 95%;
   left: 2.5%;
   height: 90%;
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.8);
   justify-content: center;
   align-items: center;
   margin-left: auto;
@@ -138,7 +142,7 @@
   gap: 1.5rem;
 }
 .button::hover{
-  background-color: hsl(9, 0%, 0%);
+  background-color: darkgray;
 }
 .button--flex{
   display: inline-flex;
