--- a/src/pages/TutorialPage.css
+++ b/src/pages/TutorialPage.css
@@ -1,5 +1,5 @@
 /* Background color for the tutorial page 
 Same as the background color for the card screen */
 .tutorialpage-content {
-  background: #F1F2EB;
+  background: #f1f2eb;
 }
